[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/square/Square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.30542, 7.82675 )

[node name="Player" type="Sprite"]
modulate = Color( 0.227451, 0.439216, 0.992157, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ReloadSpeed" type="Timer" parent="."]
wait_time = 0.1

[node name="PowerUpCooldown" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=[
"Player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )
[connection signal="timeout" from="ReloadSpeed" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ReloadSpeed" to="." method="_on_ReloadSpeed_timeout"]
[connection signal="timeout" from="PowerUpCooldown" to="." method="_on_PowerUpCooldown_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
